[package]
name = "market_data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.3"
crossbeam-channel = "0.5"
ctrlc = "3.4"
libloading = "0.8"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
widestring = "1.1"

[features]
default = ["profitdll-dyn"]
profitdll-dyn = []
