[package]
name = "market_data"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.3"
crossbeam-channel = "0.5"
ctrlc = "3.4"
dotenvy = "0.15"
libloading = "0.8"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
widestring = "1.1"

[features]
default = ["profitdll-dyn"]
profitdll-dyn = []

[dev-dependencies]
tempfile = "3.10"
